--- a/Basic_HTML_5.html
+++ b/Basic_HTML_5.html
@@ -4,5 +4,6 @@
 		<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
 		<p>Text styled using CSS class from separate file.</p>
 		<h1>&pound;10 &gt; &euro;10</h1>
+		<h2><em>Emphasized text for Assignment # 34</em></h2>
 	</body>
 </html>
