--- a/Basic_HTML_5.html
+++ b/Basic_HTML_5.html
@@ -5,5 +5,6 @@
 		<p>Text styled using CSS class from separate file.</p>
 		<h1>&pound;10 &gt; &euro;10</h1>
 		<h2><em>Emphasized text for Assignment # 34</em></h2>
+		<a href="HTML_Table.html" target="_blank">HTML Table</a>
 	</body>
 </html>
